# athas

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  components.json  flake.nix  package.json  test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/release-notes/: v0.4.5.md
.github/workflows/: ci.yml  linux-build.yml  linux-cef-build.yml  nix.yml  release-preflight.yml  release.yml
crates/ai/: Cargo.toml
crates/debugger/: Cargo.toml
crates/debugger/src/: lib.rs
crates/extensions/: Cargo.toml
crates/extensions/src/: installer.rs
crates/github/src/: api.rs  cli.rs  lib.rs
crates/lsp/: Cargo.toml
crates/remote/: Cargo.toml
crates/terminal/: Cargo.toml
crates/tooling/: Cargo.toml
docs/: installation.mdx
docs/contributing/: releasing.md
nix/: README.md
scripts/: pre-commit.ts  pre-push.ts  pre-release-check.ts  prevent-build.sh  release.ts  setup.ts  smoke-app.ts
scripts/hooks/: pre-push.ts
scripts/release/: generate-notes.mjs  package-linux-cef-tarball.sh  pre-release-check.ts  release-assets.mjs  run.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.alpha.conf.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: app_runtime.rs  app_setup.rs  main.rs  menu.rs  secure_storage.rs
src/styles/: base.css  theme.css  utilities.css
src/ui/: combobox.tsx  command.tsx  dialog.tsx  dropdown.tsx  input.tsx  number-input.tsx  search.tsx  segmented-control.tsx  select.tsx  switch.tsx  tabs.tsx  toast.tsx  tooltip.tsx
src/utils/: platform.ts  search-match.ts
(+284 files in other folders)
