[package]
name = "athas-debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
athas-runtime = { path = "../runtime" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["test"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
